--- a/style.css
+++ b/style.css
@@ -8,6 +8,30 @@ a {
     text-decoration: none;
 }
 
+ul {
+    list-style: none;
+}
+
+.navbar {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    justify-content: space-between;
+    padding: 20px;
+    color: whitesmoke;
+}
+
+.nav-links {
+    display: flex;
+    align-items: center;
+}
+
+.nav-links li {
+    margin: 0 30px; 
+}
+
 header {
     width: 100vw;
     height: 100vh;
