--- a/style.css
+++ b/style.css
@@ -19,8 +19,14 @@ ul {
     left: 0;
     width: 100%;
     justify-content: space-between;
-    padding: 20px;
+    padding: 1.5vw;
     color: whitesmoke;
+}
+
+.active {
+    color:#fc036b;
+    text-decoration: underline;
+    font-weight: bold;
 }
 
 .nav-links {
@@ -29,7 +35,7 @@ ul {
 }
 
 .nav-links li {
-    margin: 0 30px; 
+    margin: 0 2vw; 
 }
 
 header {
@@ -72,4 +78,46 @@ header {
     background: #fc036b;
     border-bottom: 30px;
     color: whitesmoke;
+}
+
+.menu-btn {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    width: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+@media only screen and (max-width:850px) {
+    .navbar {
+        padding: 0;
+    }
+    .menu-btn {
+        display: block;
+    }
+
+    .logo {
+        position: absolute;
+        top: 30px;
+        left: 30px;
+    }
+    .nav-links {
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        background: #484872;
+        margin-top: -950px;
+        transition: all 0.7s ease;
+    }
+
+    .mobile-menu {
+        margin-top: 0px;
+        border-bottom-right-radius: 32%;
+    }
+
+    .nav-links li {
+        margin: 30px auto;
+    }
 }
