--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ ul {
     list-style: none;
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 .navbar {
     display: flex;
     position: absolute;
@@ -76,8 +80,8 @@ header {
 .ctn {
     padding: 8px 15px;
     background: #fc036b;
-    border-bottom: 30px;
     color: whitesmoke;
+    border-radius: 30px;
 }
 
 .menu-btn {
@@ -87,6 +91,87 @@ header {
     width: 40px;
     cursor: pointer;
     display: none;
+}
+
+section {
+    width: 80%;
+    margin: 80px auto;
+}
+
+.title {
+    text-align: center;
+    font-size: 4vmin;
+}
+
+.img-2 {
+    margin-top: -10px
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.col a.ctn {
+    margin-top: 20px; 
+    display: inline-block;
+}
+
+.row col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.events .row {
+    margin-top: 75px;
+}
+
+h4 {
+    font-size: 3vmin;
+    color: #484872;
+    margin: 20px auto;
+}
+
+p {
+    color: #7c7c7c;
+}
+
+.explore {
+    width: 100%;
+    height: 100vh;
+    background-image: url(./img/bg2.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-items: center;
+}
+
+.explore-content {
+    width: 60%;
+    padding: 50px;
+    color: whitesmoke;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.explore-content h1 {
+    font-size: 7vmin;
+}
+
+.explore-content .line {
+    margin-bottom: 50px;
+}
+
+.explore-content p {
+    color: rgb(221 ,221, 221);
+}
+
+.explore-content .ctn {
+    margin-top: 40px;
 }
 
 @media only screen and (max-width:850px) {
