--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+p {
+    font-size: 2vmin;
+}
+
 a {
     text-decoration: none;
 }
@@ -84,6 +88,13 @@ header {
     border-radius: 30px;
 }
 
+.ctn:hover {
+    transform: scale(1.1);
+    background: whitesmoke;
+    color: #fc036b;
+    box-shadow: 2px 2px 5px black;
+}
+
 .menu-btn {
     position: absolute;
     top: 30px;
@@ -94,7 +105,7 @@ header {
 }
 
 section {
-    width: 80%;
+    width: 80vw;
     margin: 80px auto;
 }
 
@@ -119,10 +130,14 @@ section {
     display: inline-block;
 }
 
-.row col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.row .col{
+    justify-content: space-between;
+    width: 38%;
+}
+
+.events .line {
+    margin-top: 15px;
+    width: 12vw;
 }
 
 .events .row {
@@ -151,7 +166,7 @@ p {
 
 .explore-content {
     width: 60%;
-    padding: 50px;
+    padding: 100px;
     color: whitesmoke;
     display: flex;
     align-items: center;
@@ -160,9 +175,17 @@ p {
 
 .explore-content h1 {
     font-size: 7vmin;
+    padding-bottom: 15px;
+}
+
+.explore-content p {
+    padding-top: 25px;
+    font-size: 2.3vmin;
+    margin-left: 6vw;
 }
 
 .explore-content .line {
+    width: 11vw;
     margin-bottom: 50px;
 }
 
@@ -172,6 +195,72 @@ p {
 
 .explore-content .ctn {
     margin-top: 40px;
+}
+
+.content-col {
+    width: 45%;
+}
+
+.image-col {
+    width: 50%;
+}
+
+.tours .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+}
+
+.tours .line {
+    width: 18vw;
+}
+
+.image-col {
+    min-width: 50vw;
+    padding-left: 200px;
+}
+
+.image-gallery img {
+    max-width: 40vw;
+    margin: 10px;
+}
+
+.image-gallery {
+    width: 90vw;
+}
+
+.content-col h1{
+    font-size: 7vmin;
+    color: #484872;
+}
+
+.content-col .line {
+    margin-left: -1px;
+}
+
+.content-col p {
+    padding: 0;
+    margin: 30px auto;
+}
+
+.content-col .ctn {
+    margin-left: -4px;
+}
+
+.footer {
+    width: 100%;
+    min-height: 100px;
+    padding: 35px;
+    margin: 0;
+    background: #484872;
+    text-align: center;
+}
+
+.footer p {
+    color: whitesmoke;
+    margin: 20px auto;
+    padding: 20px auto;
 }
 
 @media only screen and (max-width:850px) {
@@ -202,7 +291,99 @@ p {
         border-bottom-right-radius: 32%;
     }
 
+    .events {
+        width: 80vw;
+    }
+
     .nav-links li {
         margin: 30px auto;
     }
+
+    .events p {
+        width: 90vw;
+    }
+
+    .events .ctn {
+        position: absolute;
+    }
+
+    .col img {
+        max-width: 90vw;
+    }
+
+    .events .img-2 {
+        padding-top: 15vh;
+        position:static;
+    }
+
+    .tours h1 {
+        margin-left: 10vw;
+        text-align: center;
+        width: 67vw;
+    }
+
+
+    .tours .image-gallery {
+        padding-top: 35px;
+        width: 67vw;
+        display: flex;
+        margin-left: -10px;
+        text-align: center;
+        margin-left: 35%;
+    }
+
+    .tours .line {
+        margin-left: 27vw;
+        text-align: center;
+        width: 35vw;
+    }
+
+    .tours {
+        text-align: center;
+    }
+
+    .tours p {
+        min-width: 80vw;
+        text-align: center;
+        margin-left: 25px;
+    }
+
+    .image-gallery {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .tours a.ctn {
+        width: 80%;
+        text-align: center;
+        margin-left: 31vw;
+    }
+
+
+
+    .image-gallery img {
+        width: 80vw;
+    }
+
+    .explore-content {
+        padding-top: 50%;
+        margin-top: 20vw;
+        width: 100%;
+        text-align: center;
+    }
+
+    .row {
+        flex-direction: column;
+        margin-left: -29vw;
+    }
+
 }
+
+img {
+    transition: transform 0.3s ease;
+}
+
+img:hover {
+    transform: scale(1.1);
+}
+
